# Effulge

./: .gitignore  Effulge.py  README.md  requirements.txt  setup.cfg
SampleData/: table1.csv  table2.csv
effulge/: effulge.py  report_generator.py  requirements.txt  scatter.py  scatter_tree_compare.py
src/effulge/: __init__.py  effulge.py  report_generator.py  scatter_tree_compare.py  scatter_tree_nodes.py
tests/: prepare_python_path.sh  simple_run.py
