[metadata]
name = Effulge
version = 0.0.1
author = Regish
author_email = regishdhanush@gmail.com
description = A small package used to find data variances
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Regish/Effulge
project_urls =
    Bug Tracker = https://github.com/Regish/Effulge/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.0
install_requires =
    pyspark>=3.0.0
    pandas>=1.3.0
    XlsxWriter>=3.0.3

[options.packages.find]
where = src

